2012-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Changes to try to work better with the
	Windows WIN64 API.

2012-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageColorRegion): The provided color should
	be in the same colorspace as the image.  The image is no longer
	converted to RGB with the expectation that the provided color is
	always some particular RGB.
	(AppendImages): No longer transform the canvas image to RGB.  Now
	append uses the first listed image to determine the colorspace
	which should be used when appending the additional images and of
	the output image.  The additional images are converted to the
	canvas image colorspace.  Likewise, the background color is
	assumed to be in the same colorspace as the first listed image so
	that it is compatible and can be used to fill the background color
	without translation.

2012-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: Remove extraneous space in first line which
	prevents execution with T-shell (tsch).  Reported by William
	Langdon.

2012-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/wand/wand.rst: Add a simple example of using the Wand API.

2012-11-21  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/bmp.c (ReadBMPImage): Fixed an old bug with decoding
	chromaticity primaries.

2012-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.h ("C"): Need to include wand/wand_symbols.h
	after magick/api.h in order for options from magick_config.h to
	take effect.

	* magick/symbols.h (PSPageGeometry): Fix typo. Should map to
	GmPSPageGeometry.

2012-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wand_symbols.h, magick/symbol.h: MagickWand API is now
	prefixed with 'Gm' when the --enable-symbol-prefix configure
	option is supplied.  These changes are contributed by Ben Wu.
	Details of changes are as follows:
