@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121208"
-#define public MagickPackageReleaseDate "snapshot-20121208"
+#define public MagickPackageVersionAddendum ".020121209"
+#define public MagickPackageReleaseDate "snapshot-20121209"
